k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infinitywar-landingpage
  namespace: infinitywar
  labels:
    app: infinitywar-landingpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infinitywar-landingpage
  template:
    metadata:
      labels:
        app: infinitywar-landingpage
    spec:
      containers:
      - name: infinity-war-landing-page-container
        image: metafi/intinitywar-landing-page:0.1.4
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
