k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infinitywar-landingpage
  namespace: infinitywar
spec:
  type: NodePort
  selector:
    app: infinitywar-landingpage
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30404  # Cổng trên node mà bạn sẽ dùng để truy cập
