k8s/doks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infinitywar-landingpage-ingress
  namespace: infinitywar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: infinitywar.metafi.gg  # Domain bạn sẽ trỏ A Record vào IP LoadBalancer
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: infinitywar-landingpage
            port:
              number: 80
