k8s/ssl-sslingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infinitywar-landingpage-ingress
  namespace: infinitywar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - infinitywar.metafi.gg
    secretName: infinitywar-landingpage-tls  # Cert-manager sẽ tự tạo TLS secret này
  rules:
  - host: infinitywar.metafi.gg
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: infinitywar-landingpage
            port:
              number: 80
